# Asset-Tracker-Template

./: .gitignore  CMakeLists.txt  DEVACADEMY.txt  DEVACADEMY_RULE_GENERATOR.txt  Kconfig  LICENSE  README.md  mkdocs.yml  sonar-project.properties  west.yml
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  Kconfig.tfm  VERSION  overlay-etb.conf  overlay-memfault-extra.conf  overlay-memfault-fota.conf  overlay-memfault.conf  overlay-modem-delta-fw-update.conf  overlay-modem-trace-over-uart.conf  overlay-modem-trace-shmem.overlay  overlay-ntn-amari.conf  overlay-ntn-oqtech.conf  overlay-ntn-sateliot.conf  overlay-ntn-skylo-DT.conf  overlay-ntn-skylo-dt.conf  overlay-ntn-skylo-monogoto.conf  overlay-ntn-skylo-soracom.conf  overlay-ntn.conf  overlay-softsim-app.conf  overlay-softsim.conf  overlay-storage-minimal.conf  overlay-upload-modem-traces-to-memfault.conf  overlay-upload-modem-traces-to-memfault.overlay  pm_static.yml  pm_static_thingy91x_nrf9151_ns.yml  prj.conf  sample.yaml  sysbuild.cmake  sysbuild.conf
app/boards/: att_flash_partitions.dtsi  att_sram_partitions.dtsi  native_sim.conf  nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp_noinit.ld  nrf9151dk_nrf9151_ns.conf  nrf9151dk_nrf9151_ns.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf9161dk_nrf9161_ns.conf  nrf9161dk_nrf9161_ns.overlay  thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay  thingy91x_nrf9151_ns.conf  thingy91x_nrf9151_ns.overlay
app/config/: memfault_nrf_platform_battery_model.h  memfault_platform_config.h  memfault_trace_reason_user_config.def
app/dts/: att_flash_partitions.dtsi  att_sram_partitions.dtsi  memfault_coredump_partition.dtsi  nrf9151dk_flash_partitions.dtsi  nrf9151dk_prelude.dtsi  thingy91x_prelude.dtsi
app/memfault/: Kconfig.memfault
app/src/: Kconfig.main  main.c  main_other.c
app/src/cbor/: CMakeLists.txt  cbor_helper.c  cbor_helper.h  device_shadow.cddl
app/src/common/: CMakeLists.txt  app_common.h  message_channel.c  message_channel.h  modules_common.h
app/src/inspect/: CMakeLists.txt  Kconfig.inspect  app_inspect.h  inspect_sections.ld  inspect_shell.c
app/src/modules/app/: Kconfig.app  app.c
app/src/modules/battery/: CMakeLists.txt  Kconfig.battery  battery.c  battery.h
app/src/modules/button/: CMakeLists.txt  Kconfig.button  button.c  button.h  button_shell.c
app/src/modules/cloud/: CMakeLists.txt  Kconfig.cloud  cloud.c  cloud.h  cloud_codec.c  cloud_codec.h  cloud_configuration.c  cloud_configuration.h  cloud_environmental.c  cloud_environmental.h  cloud_internal.h  cloud_location.c  cloud_location.h  cloud_module.c  cloud_module.h  cloud_module_mqtt.c  cloud_module_shell.c  cloud_provisioning.c  cloud_provisioning.h  cloud_shell.c
app/src/modules/cloud_ntn/: CMakeLists.txt  Kconfig.cloud  cloud.c  cloud.h
app/src/modules/dummy/: CMakeLists.txt  Kconfig.dummy  dummy.c  dummy.h
app/src/modules/environmental/: CMakeLists.txt  Kconfig.environmental  environmental.c  environmental.h
app/src/modules/fota/: CMakeLists.txt  Kconfig.fota  fota.c  fota.h  fota_shell.c
app/src/modules/led/: CMakeLists.txt  Kconfig.led  led.c  led.h
app/src/modules/location/: CMakeLists.txt  Kconfig.location  location.c  location.h  location_helper.c  location_helper.h  location_shell.c
app/src/modules/memfault/: memfault.c
app/src/modules/network/: CMakeLists.txt  Kconfig.network  Kconfig.network_ntn  network.c  network.h  network_conn_mgr.c  network_ntn.c  network_ntn.h  network_ntn_shell.c  network_ppp.c  network_shell.c  network_tn.h
app/src/modules/network_ntn/: Kconfig.network  network.c  network.h
app/src/modules/ntn/: CMakeLists.txt  Kconfig.ntn  ntn.c  ntn.h  ntn_shell.c
app/src/modules/ntn_module/: CMakeLists.txt  Kconfig.ntn  ntn.c  ntn.h
app/src/modules/power/: CMakeLists.txt  Kconfig.power  fuel_gauge_state.c  fuel_gauge_state.h  power.c  power.c.old  power.h  power_shell.c  vbus_events.c  vbus_events.h
app/src/modules/sgp4/: CMakeLists.txt  Kconfig.sat_prediction  Kconfig.sgp4  SGP4.c  SGP4.h  celestrak_client.c  celestrak_client.h  certificates.h  sat_prediction.c  sat_prediction.h  sgp4_pass_predict.c  sgp4_pass_predict.h
app/src/modules/shell/: Kconfig.shell  shell.c
app/src/modules/storage/: CMakeLists.txt  Kconfig.storage  storage.c  storage.h  storage_backend.h  storage_data_types.c  storage_data_types.h  storage_sections.ld  storage_shell.c
app/src/modules/transport/: CMakeLists.txt  Kconfig.transport  transport.c  transport_module.c  transport_module.h
app/src/modules/trigger/: CMakeLists.txt  Kconfig.trigger  trigger.c
app/src/modules/uart_power_control/: CMakeLists.txt  Kconfig.uart_power_control  uart_power_control.c
app/sysbuild/b0/: prj.conf
app/sysbuild/b0/boards/: nrf9151dk_nrf9151.overlay  thingy91x_nrf9151.overlay
app/sysbuild/mcuboot/: app.overlay  prj.conf
app/sysbuild/mcuboot/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  (+5 more)
examples/modules/cloud/: CMakeLists.txt  Kconfig.cloud_mqtt  cloud_mqtt.c  cloud_mqtt_environmental.c  cloud_mqtt_environmental.h  cloud_mqtt_location.c  cloud_mqtt_location.h  cloud_mqtt_shell.c  creds.h  overlay-mqtt.conf
tests/common/: CMakeLists.txt  prj.conf  testcase.yaml
tests/common/src/: app_common_test.c
tests/lib/ntn-sib32/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/battery/: CMakeLists.txt  testcase.yaml
tests/module/button/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/cloud/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/cloud_mqtt/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/fota/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/location/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/main/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/network/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/network_ntn/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/ntn/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/power/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/shell/: CMakeLists.txt  testcase.yaml
(+259 files in other folders)
